--- a/src/sizing/tyndp2018/config.yaml
+++ b/src/sizing/tyndp2018/config.yaml
@@ -21,11 +21,11 @@ solver_options:
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2015-01-01T00:00', '2015-01-01T10:00']
+  slice: ['2015-01-01T00:00', '2015-01-04T10:00']
   resolution: 1
 
 # Space
-region: "BENELUX"
+region: "EU"
 # add_offshore: False
 
 # RES
@@ -33,16 +33,16 @@ res:
   include: True
   # Give which technology should be installed using each strategy
   strategies:
-    from_files: []
+    from_files: ['wind_offshore']
     no_siting: []
     siting: []
-    bus: ['pv_utility']
+    bus: ['pv_utility', 'wind_onshore']
 
   # For strategy = max or comp
   sites_dir: 'EU_wide_off_2015_08'
   sites_fn: 'max_site_data.p'
   use_default_capacity: True
-  area_per_site: 2500 #km2
+#  area_per_site: 2500 #km2
   # cap_dens:
   #   wind_onshore: 3  # MW/km2, assuming 30% max utilization of the entire cell area
   #   wind_offshore: 6 # MW/km2, assuming 60% max utilization of the entire cell area
