--- a/pyggrid/siting/config.yaml
+++ b/pyggrid/siting/config.yaml
@@ -1,5 +1,5 @@
 # Scope parameters
-spatial_resolution: 0.5
+spatial_resolution: 1.0
 timeslice: ['2015-01-01T00:00', '2015-12-31T23:00']
 regions: ['CWE']
 technologies: ['wind_onshore', 'wind_offshore', 'pv_utility', 'pv_residential']
@@ -9,9 +9,9 @@ use_ex_cap: False
 # Optimization parameters
 formulation: 'meet_RES_targets' # Type of problem to be solved.
 formulation_params:
-  #cap_per_tech: [0.5, 0.5]
-  perc_per_region: [0.3]
+  # cap_per_tech: [0.5, 0.5]
+  perc_per_region: [0.32]
   time_resolution: 'hour'
-  nb_sites_per_region: [11]
+  # nb_sites_per_region: [11]
 modelling: 'pyomo' # Choice of modelling language.
 write_lp: False
