IP siting integrated (still need some cleanup)

--- a/pyggrid/siting/config.yaml
+++ b/pyggrid/siting/config.yaml
@@ -1,7 +1,7 @@
 # Scope parameters
-spatial_resolution: 1.0
-timeslice: ['2016-01-01T00:00', '2016-01-01T23:00']
-regions: ['BENELUX']
+spatial_resolution: 0.5
+timeslice: ['2016-01-01T00:00', '2016-01-01T4:00']
+regions: ['BE', 'NL', 'LU']
 technologies: ['wind_offshore']
 
 use_ex_cap: False
@@ -10,8 +10,36 @@ use_ex_cap: False
 formulation: 'complementarity' # Type of problem to be solved.
 formulation_params:
   # cap_per_tech: [0.5, 0.5]
-  perc_per_region: [0.32]
-  time_resolution: 'hour'
+  #perc_per_region: [0.32]
+  #time_resolution: 'hour'
   # nb_sites_per_region: [11]
-modelling: 'pyomo' # Choice of modelling language.
+  c: 1
+  solution_method:
+    BB:
+      set: False
+      solver: 'gurobi'
+      mipgap: 0.05
+      timelimit: 1800
+      threads: 0
+    HEU:
+      set: True
+      neighborhood: 1
+      no_iterations: 150
+      no_epochs: 500
+      initial_temp: 200.
+      no_runs: 5
+      algorithm: 'SALS' #'GLS'
+      which_sol: 'max' #'rand'
+
+  deployment_vector: {'BE':{'wind_offshore':1},
+                      'NL':{'wind_offshore':2}}
+  # Assessment measure for each time window. Available: mean, median or percentiles.
+  smooth_measure: 'mean'
+  # Defines how \alpha is considered in space and time.
+  alpha: 'load_central'
+  # Normalization procedures (detailed in tools.py). (min, max)
+  norm_type: 'max'
+  # Time-window length used to compute the criticality indicator. Integer value.
+  delta: 1
+modelling: 'julia' # Choice of modelling language.
 write_lp: False
