--- a/projects/mga/config.default.yaml
+++ b/projects/mga/config.default.yaml
@@ -1,76 +1,18 @@
-# model
-keep_lp: False
-
-# solver
-solver: 'gurobi'
-solver_options:
-  gurobi:
-    Threads: 0
-    Method: 2
-    BarHomogeneous: 1
-    Crossover: 0
-    BarConvTol: 1e-8
-  cplex:
-    threads: 0
-    lpmethod: 1
-    solutiontype: 2
-    barrier convergetol: 1e-8
-
-  cbc: 0
+# Space
+region: "BENELUX"
 
 # Time
 # Start time and end time for slicing the database.
 time:
-  slice: ['2016-01-01T00:00', '2016-01-01T04:00']
+  slice: ['2016-01-01T00:00', '2016-01-01T23:00']
   resolution: 1
-
-# Space
-region: "BENELUX"
 
 # RES
 res:
   include: True
-  # Give which technology should be installed using each strategy
-  techs: ['wind_onshore']
-  strategies:
-    # from_files: []
-    no_siting: []
-    siting: []
-    # bus: []
-
-  min_cap_pot: [0]
-
-  # For strategy = max or comp
-  sites_dir: 'EU_wide_off_2015_08'
-  sites_fn: 'max_site_data.p'
-  use_default_capacity: True
-
-  # For strategy = siting or no siting
-  # Various data layers to be taken into account in potential site selection.
-  spatial_resolution: 1.0
-  timeslice: ['2016-01-01T00:00', '2016-01-01T04:00']
-  use_ex_cap: True
+  techs: ['pv_utility', 'wind_onshore', 'wind_offshore']
+  use_ex_cap: False
   limit_max_cap: True
-  min_cap_if_selected: 1.0e-3
-
-  # For strategy = siting
-  modelling: 'pyomo' # Choice of modelling language. Available: 'gurobipy', 'docplex' and 'pyomo'
-  solver: 'gurobi' # Choice of solver. Available: 'gurobi', 'cplex' and 'cbc'
-  solver_options:
-    Threads: 0
-    Method: 2
-    BarHomogeneous: 1
-    Crossover: 0
-    BarConvTol: 1e-8
-  write_lp: False
-  write_log: False
-  # Type of problem to be solved. Check resite.py for a full list.
-  formulation: 'meet_RES_targets'
-  formulation_params:
-    perc_per_region: [0.32]
-    time_resolution: 'hour'
-  # Keeping files at the end of the run.
-  keep_files: True
 
 # Conventional generation
 dispatch:
@@ -119,7 +61,28 @@ functionalities:
     include: False
     share: 0.5
   co2_emissions:
-    include: True
+    include: False
     strategy: 'global' # country, global
     reference_year: 1990 # Flat reference across all countries for now.
     mitigation_factor: 0.9
+
+
+# solver
+solver: 'gurobi'
+solver_options:
+  # gurobi:
+  # Threads: 0
+  Method: 2
+  BarHomogeneous: 1
+  Crossover: 1
+  BarConvTol: 1.0e-8
+  # cplex:
+  # threads: 0
+  # lpmethod: 1
+  # solutiontype: 2
+  # barrier convergetol: 1e-8
+
+  cbc: 0
+
+# model
+keep_lp: False
