--- a/projects/applen/config.yaml
+++ b/projects/applen/config.yaml
@@ -20,7 +20,7 @@ solver_options:
 
 # Time
 time:
-  slice: ['2018-01-01T00:00', '2018-01-31T23:00']
+  slice: ['2018-01-01T00:00', '2018-12-31T23:00']
   resolution: 1
   downsampling: 3
 
@@ -41,7 +41,7 @@ res:
       sites_fn: None
     bus:
       which: ['wind_onshore', 'pv_utility', 'pv_residential']
-      extendable: False
+      extendable: True
       use_ex_cap: True
 
   min_cap_pot: [0.001, 0.001, 0.001, 0.001]
