--- a/projects/epsilon_optimality/config.default.yaml
+++ b/projects/epsilon_optimality/config.default.yaml
@@ -1,6 +1,9 @@
 # MGA
 mga:
-  epsilons: [0.1]
+  epsilons: [0.01, 0.1, 0.2]
+  type: 'res-cap'
+  subtype: 'wind_onshore_national'
+  args: ['BE', 'NL']
 
 # Space
 region: "BENELUX"
@@ -10,26 +13,28 @@ region: "BENELUX"
 time:
   slice: ['2016-01-01T00:00', '2016-01-01T23:00']
   resolution: 1
+  agg_resolution: '2H'
 
 # Lines
-extension_multiplier: 1.0
+extension_multiplier: 2.0
 p_max_pu: 0.7 # value based on Neumann
 
 # RES
 res:
   include: True
-  techs: ['pv_utility', 'wind_onshore', 'wind_offshore']
+  techs: ['pv_utility_national', 'wind_onshore_national', 'wind_offshore_national']
   use_ex_cap: False
   limit_max_cap: True
+  precision: 2
 
 # Conventional generation
 dispatch:
   include: True
-  tech: "ccgt"
+  techs: ["ccgt", "ocgt"]
 
 # Nuclear
 nuclear:
-  include: False
+  include: True
   use_ex_cap: True # Whether to include existing cap
   extendable: False
 
@@ -37,7 +42,6 @@ nuclear:
 battery:
   include: True
   type: "Li-ion"
-  fixed_duration: True
 
 # Hydro
 phs:
@@ -66,15 +70,15 @@ functionalities:
     include: False
     strategy: ['economic', 10.] # ['technical', 0.], ['technical', 1.], ['economic', 0.], ['economic', 9999.]
   load_shed:
-    include: False
+    include: True
   import_limit:
     include: False
     share: 0.5
   co2_emissions:
-    include: False
+    include: True
     strategy: 'global' # country, global
     reference_year: 1990 # Flat reference across all countries for now.
-    mitigation_factor: 0.9
+    mitigation_factor: 0.99
 
 
 # solver
@@ -83,16 +87,19 @@ solver_options:
   # gurobi:
   # Threads: 0
   Method: 2
-  BarHomogeneous: 1
-  Crossover: 1
-  BarConvTol: 1.0e-8
+  # BarHomogeneous: 0
+  # Crossover: 0
+  # BarConvTol: 1.0e-8
+  Presolve: 0
+  # FeasibilityTol - feasibility of primal constraints (default : 10e-6)
+  # OptimalityTol - feasibility of dual constraints
   # cplex:
   # threads: 0
   # lpmethod: 1
   # solutiontype: 2
   # barrier convergetol: 1e-8
 
-  cbc: 0
+  # cbc: 0
 
 # model
-keep_lp: False
+keep_lp: True
