--- a/environment2.yaml
+++ b/environment2.yaml
@@ -2,6 +2,7 @@ name: replan
 channels:
   - defaults
   - conda-forge
+  - gurobi
 dependencies:
   - python=3.7.6
   - pip
@@ -16,6 +17,9 @@ dependencies:
   - xlrd
   - progressbar2
   - libwebp
+  - unidecode
+  - openpyxl
+  - gurobi
 
   - pip:
       - git+https://github.com/FZJ-IEK3-VSA/geokit.git#egg=geokit
